force-app/main/default/objects/OrgCustomSettings__c/OrgCustomSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Generic org settings will be stored here</description>
    <label>Org Custom Settings</label>
</CustomObject>