force-app/main/default/objects/OrgCustomSettings__c/fields/AllowedFileType__c.field-meta.xml
<CustomField>
    <fullName>AllowedFileType__c</fullName>
    <label>AllowedFileType</label>
    <length>200</length>
    <type>Text</type>
</CustomField>