force-app/main/default/objects/OrgCustomSettings__c/fields/ApprovalRollbackDays__c.field-meta.xml
<CustomField>
    <fullName>ApprovalRollbackDays__c</fullName>
    <label>ApprovalRollbackDays</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>