force-app/main/default/objects/OrgCustomSettings__c/fields/BatchNumberofJobImages__c.field-meta.xml
<CustomField>
    <fullName>BatchNumberofJobImages__c</fullName>
    <description>BatchGenerateJobImageUrl batch process how many Job images needs to retrieve.</description>
    <label>Batch No of JobImages</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>