force-app/main/default/objects/OrgCustomSettings__c/fields/BatchRetryAlertEmails__c.field-meta.xml
<CustomField>
    <fullName>BatchRetryAlertEmails__c</fullName>
    <label>BatchRetryAlertEmails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>