force-app/main/default/objects/OrgCustomSettings__c/fields/ClosedProjectPendingArchiveDays__c.field-meta.xml
<CustomField>
    <fullName>ClosedProjectPendingArchiveDays__c</fullName>
    <defaultValue>30</defaultValue>
    <description>Number days since the project close date to set project archive status to pending</description>
    <label>ClosedProjectPendingArchiveDays</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>