force-app/main/default/objects/OrgCustomSettings__c/fields/ClosedProjectRetentionDays__c.field-meta.xml
<CustomField>
    <fullName>ClosedProjectRetentionDays__c</fullName>
    <defaultValue>30</defaultValue>
    <label>Closed Project Retention Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>