force-app/main/default/objects/OrgCustomSettings__c/fields/CommunitySiteUrl__c.field-meta.xml
<CustomField>
    <fullName>CommunitySiteUrl__c</fullName>
    <label>CommunitySiteUrl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>