force-app/main/default/objects/OrgCustomSettings__c/fields/CreateAttemptSize__c.field-meta.xml
<CustomField>
    <fullName>CreateAttemptSize__c</fullName>
    <label>Create Attempt Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>