force-app/main/default/objects/OrgCustomSettings__c/fields/CreditLineItemOrder__c.field-meta.xml
<CustomField>
    <fullName>CreditLineItemOrder__c</fullName>
    <label>Credit Line Item Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>