force-app/main/default/objects/OrgCustomSettings__c/fields/CustomLocationType__c.field-meta.xml
<CustomField>
    <fullName>CustomLocationType__c</fullName>
    <description>Next level up from the bottom level location type. This value may be different across orgs.</description>
    <label>Custom Location Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>