force-app/main/default/objects/OrgCustomSettings__c/fields/DataArchivePendingProjectsLimit__c.field-meta.xml
<CustomField>
    <fullName>DataArchivePendingProjectsLimit__c</fullName>
    <label>Data Archive Pending Projects Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>