force-app/main/default/objects/OrgCustomSettings__c/fields/DataArchiveProjectsLimit__c.field-meta.xml
<CustomField>
    <fullName>DataArchiveProjectsLimit__c</fullName>
    <defaultValue>50</defaultValue>
    <label>DataArchiveProjectsLimit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>