force-app/main/default/objects/OrgCustomSettings__c/fields/DataImportChunkSize__c.field-meta.xml
<CustomField>
    <fullName>DataImportChunkSize__c</fullName>
    <description>Data import attachment chunk size, which is used by import jobs from program process</description>
    <label>Data Import Chunk Size</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>