force-app/main/default/objects/OrgCustomSettings__c/fields/DefaultGroupProject__c.field-meta.xml
<CustomField>
    <fullName>DefaultGroupProject__c</fullName>
    <label>DefaultGroupProject</label>
    <length>50</length>
    <type>Text</type>
</CustomField>