force-app/main/default/objects/OrgCustomSettings__c/fields/DefaultProjectRecordType__c.field-meta.xml
<CustomField>
    <fullName>DefaultProjectRecordType__c</fullName>
    <label>Default Project Record Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>