force-app/main/default/objects/OrgCustomSettings__c/fields/EnableMultiListQnsDragnDrop__c.field-meta.xml
<CustomField>
    <fullName>EnableMultiListQnsDragnDrop__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag enables drag and drop feature on survey builder for multi select question.</description>
    <inlineHelpText>This flag enables drag and drop feature on survey builder for multi select question.</inlineHelpText>
    <label>EnableMultiListQnsDragnDrop</label>
    <type>Checkbox</type>
</CustomField>