force-app/main/default/objects/OrgCustomSettings__c/fields/EntityChangeLogPurgeDays__c.field-meta.xml
<CustomField>
    <fullName>EntityChangeLogPurgeDays__c</fullName>
    <label>Entity Change Log Purge Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>