force-app/main/default/objects/OrgCustomSettings__c/fields/EntityChangeLogPurgeSize__c.field-meta.xml
<CustomField>
    <fullName>EntityChangeLogPurgeSize__c</fullName>
    <label>Entity Change Log Purge Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>