force-app/main/default/objects/OrgCustomSettings__c/fields/EntityChangeLogURI__c.field-meta.xml
<CustomField>
    <fullName>EntityChangeLogURI__c</fullName>
    <label>Entity Change Log URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>