force-app/main/default/objects/OrgCustomSettings__c/fields/ErrorNotificationEmail__c.field-meta.xml
<CustomField>
    <fullName>ErrorNotificationEmail__c</fullName>
    <label>Error Notification Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>