force-app/main/default/objects/OrgCustomSettings__c/fields/ExportJobReportUrl__c.field-meta.xml
<CustomField>
    <fullName>ExportJobReportUrl__c</fullName>
    <description>https://onehub--devmurali.lightning.force.com/one/one.app#/sObject/00O11000000Gbi8EAC/view?t=1492800857517&amp;fv0={projectNumber__c}</description>
    <label>Export Job Report Url</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>