force-app/main/default/objects/OrgCustomSettings__c/fields/FavoritePhotoMaxCount__c.field-meta.xml
<CustomField>
    <fullName>FavoritePhotoMaxCount__c</fullName>
    <defaultValue>10</defaultValue>
    <description>The maximum number of photos that can be marked as favorite</description>
    <label>FavoritePhotoMaxCount</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>