force-app/main/default/objects/OrgCustomSettings__c/fields/FileTypeCheckRequiredObjects__c.field-meta.xml
<CustomField>
    <fullName>FileTypeCheckRequiredObjects__c</fullName>
    <label>File Type Check Required Objects</label>
    <length>200</length>
    <type>Text</type>
</CustomField>