force-app/main/default/objects/OrgCustomSettings__c/fields/HistoryRecordLimit__c.field-meta.xml
<CustomField>
    <fullName>HistoryRecordLimit__c</fullName>
    <label>History Record Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>