force-app/main/default/objects/OrgCustomSettings__c/fields/IsAttemptableFieldName__c.field-meta.xml
<CustomField>
    <fullName>IsAttemptableFieldName__c</fullName>
    <label>IsAttemptableFieldName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>