force-app/main/default/objects/OrgCustomSettings__c/fields/JAWImportChunkSize__c.field-meta.xml
<CustomField>
    <fullName>JAWImportChunkSize__c</fullName>
    <label>Job Attempt Worker ImportChunk Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>