force-app/main/default/objects/OrgCustomSettings__c/fields/JAWImportFields__c.field-meta.xml
<CustomField>
    <fullName>JAWImportFields__c</fullName>
    <label>JAWImportFields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>