force-app/main/default/objects/OrgCustomSettings__c/fields/JAWImportTitle_c__c.field-meta.xml
<CustomField>
    <fullName>JAWImportTitle_c__c</fullName>
    <label>JAWImportTitle_c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>