force-app/main/default/objects/OrgCustomSettings__c/fields/JobAttemptWorkerReportUrl__c.field-meta.xml
<CustomField>
    <fullName>JobAttemptWorkerReportUrl__c</fullName>
    <label>JobAttemptWorkerReportUrl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>