force-app/main/default/objects/OrgCustomSettings__c/fields/JobImportChunkSize__c.field-meta.xml
<CustomField>
    <fullName>JobImportChunkSize__c</fullName>
    <description>Job import per transaction maximum jobs to modify</description>
    <inlineHelpText>Job import chunk size</inlineHelpText>
    <label>Job Import Chunk Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>