force-app/main/default/objects/OrgCustomSettings__c/fields/JobImportFields__c.field-meta.xml
<CustomField>
    <fullName>JobImportFields__c</fullName>
    <label>Job Import Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>