force-app/main/default/objects/OrgCustomSettings__c/fields/JobImportTitle__c.field-meta.xml
<CustomField>
    <fullName>JobImportTitle__c</fullName>
    <label>Job Import Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>