force-app/main/default/objects/OrgCustomSettings__c/fields/LocationImportChunkSIze__c.field-meta.xml
<CustomField>
    <fullName>LocationImportChunkSIze__c</fullName>
    <description>Location import chunk size</description>
    <label>Location Import Chunk SIze</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>