force-app/main/default/objects/OrgCustomSettings__c/fields/LocationImportFields__c.field-meta.xml
<CustomField>
    <fullName>LocationImportFields__c</fullName>
    <description>project location fields list for update</description>
    <label>Location Import Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>