force-app/main/default/objects/OrgCustomSettings__c/fields/LocationImportTitle__c.field-meta.xml
<CustomField>
    <fullName>LocationImportTitle__c</fullName>
    <description>a list of comma separated field</description>
    <label>Location Import Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>