force-app/main/default/objects/OrgCustomSettings__c/fields/LocationReportUrl__c.field-meta.xml
<CustomField>
    <fullName>LocationReportUrl__c</fullName>
    <description>https://onehub--devmurali.lightning.force.com/one/one.app#/sObject/00O11000000Gbi8EAC/view?t=1492800857517&amp;fv0={projectNumber__c}</description>
    <inlineHelpText>Location Report URL</inlineHelpText>
    <label>LocationReportUrl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>