force-app/main/default/objects/OrgCustomSettings__c/fields/LocationSearchField__c.field-meta.xml
<CustomField>
    <fullName>LocationSearchField__c</fullName>
    <description>The value is used to determine if the search location is based on location number or onehub location Id (location unique id)</description>
    <inlineHelpText>The valid values are LocationNumber__c and OneHubLocationId__c</inlineHelpText>
    <label>SearchLocationField</label>
    <length>50</length>
    <type>Text</type>
</CustomField>