force-app/main/default/objects/OrgCustomSettings__c/fields/MaximumRetryCount__c.field-meta.xml
<CustomField>
    <fullName>MaximumRetryCount__c</fullName>
    <defaultValue>3</defaultValue>
    <description>Maximum retry count</description>
    <label>MaximumRetryCount</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>