force-app/main/default/objects/OrgCustomSettings__c/fields/MaxProjectsPerWakeup__c.field-meta.xml
<CustomField>
    <fullName>MaxProjectsPerWakeup__c</fullName>
    <description>The maximum number of projects to handle per schedule wake up</description>
    <inlineHelpText>The maximum number of projects to handle per schedule wake up</inlineHelpText>
    <label>MaxProjectsPerWakeup</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>