force-app/main/default/objects/OrgCustomSettings__c/fields/MaxServicesforManualGeneration__c.field-meta.xml
<CustomField>
    <fullName>MaxServicesforManualGeneration__c</fullName>
    <label>Max Services for Manual Generation</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>