force-app/main/default/objects/OrgCustomSettings__c/fields/NonClosedShiftEmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>NonClosedShiftEmailTemplate__c</fullName>
    <description>an email template used to send email notification that the shift is not closed within X timeframe</description>
    <label>Non Closed Shift Email Template</label>
    <length>100</length>
    <type>Text</type>
</CustomField>