force-app/main/default/objects/OrgCustomSettings__c/fields/NonClosedShiftTimeframe__c.field-meta.xml
<CustomField>
    <fullName>NonClosedShiftTimeframe__c</fullName>
    <description>The time frame (minutes) that is used to send email notification to the assigned primary workers and his/her supervisor</description>
    <label>Non-closed shift notification timeframe</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>