force-app/main/default/objects/OrgCustomSettings__c/fields/NumberOfBatchRetries__c.field-meta.xml
<CustomField>
    <fullName>NumberOfBatchRetries__c</fullName>
    <label>Number Of Batch Retries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>