force-app/main/default/objects/OrgCustomSettings__c/fields/OneHubAccountType__c.field-meta.xml
<CustomField>
    <fullName>OneHubAccountType__c</fullName>
    <label>OneHub Account Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>