force-app/main/default/objects/OrgCustomSettings__c/fields/OrgInstanceName__c.field-meta.xml
<CustomField>
    <fullName>OrgInstanceName__c</fullName>
    <description>To identify the prod org instance</description>
    <label>Org Instance Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>