force-app/main/default/objects/OrgCustomSettings__c/fields/PageSize__c.field-meta.xml
<CustomField>
    <fullName>PageSize__c</fullName>
    <description>page size of the records that can be retrieved from the client</description>
    <label>Page Size</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>