force-app/main/default/objects/OrgCustomSettings__c/fields/PhotoViewerChainType__c.field-meta.xml
<CustomField>
    <fullName>PhotoViewerChainType__c</fullName>
    <description>The chain type for the photo viewer filter. The type is the location type that is used to filter out the locations for that type.</description>
    <inlineHelpText>The chain type for the photo viewer filter</inlineHelpText>
    <label>PhotoViewerChainType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>