force-app/main/default/objects/OrgCustomSettings__c/fields/PhotoViewerLookupSize__c.field-meta.xml
<CustomField>
    <fullName>PhotoViewerLookupSize__c</fullName>
    <description>configure the photo viewer lookup search result size</description>
    <label>PhotoViewer Lookup Size</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>