force-app/main/default/objects/OrgCustomSettings__c/fields/PhotoViewerMaxExport__c.field-meta.xml
<CustomField>
    <fullName>PhotoViewerMaxExport__c</fullName>
    <defaultValue>50</defaultValue>
    <description>The maximum image export count</description>
    <label>PhotoViewerMaxExport</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>