force-app/main/default/objects/OrgCustomSettings__c/fields/PhotoViewerPageSize__c.field-meta.xml
<CustomField>
    <fullName>PhotoViewerPageSize__c</fullName>
    <defaultValue>100</defaultValue>
    <label>PhotoViewerPageSize</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>