force-app/main/default/objects/OrgCustomSettings__c/fields/ProjectInvoiceDueDateThreshold__c.field-meta.xml
<CustomField>
    <fullName>ProjectInvoiceDueDateThreshold__c</fullName>
    <label>Project Invoice Due Date Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>