force-app/main/default/objects/OrgCustomSettings__c/fields/ProjectLocationCancelationChatterMessage__c.field-meta.xml
<CustomField>
    <fullName>ProjectLocationCancelationChatterMessage__c</fullName>
    <label>ProjectLocationCancelationChatterMessage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>