force-app/main/default/objects/OrgCustomSettings__c/fields/ProjectStatusChangeSize__c.field-meta.xml
<CustomField>
    <fullName>ProjectStatusChangeSize__c</fullName>
    <label>Project Status Change Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>