force-app/main/default/objects/OrgCustomSettings__c/fields/ReservationProcessLimit__c.field-meta.xml
<CustomField>
    <fullName>ReservationProcessLimit__c</fullName>
    <label>Reservation Process Limit</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>