force-app/main/default/objects/OrgCustomSettings__c/fields/ReservationReportUrl__c.field-meta.xml
<CustomField>
    <fullName>ReservationReportUrl__c</fullName>
    <description>https://onehub--unmanaged.lightning.force.com/lightning/r/Report/00O21000000OWZwEAO/view?fv0={ReservationId}</description>
    <label>ReservationReportUrl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>