force-app/main/default/objects/OrgCustomSettings__c/fields/ServiceImportChunkSIze__c.field-meta.xml
<CustomField>
    <fullName>ServiceImportChunkSIze__c</fullName>
    <label>Service Import Chunk SIze</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>