force-app/main/default/objects/OrgCustomSettings__c/fields/ServiceImportTitle__c.field-meta.xml
<CustomField>
    <fullName>ServiceImportTitle__c</fullName>
    <label>Service Import Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>