force-app/main/default/objects/OrgCustomSettings__c/fields/ThirdPartyAgencyChangeEmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>ThirdPartyAgencyChangeEmailTemplate__c</fullName>
    <label>3PL Agency Change Email Template</label>
    <length>50</length>
    <type>Text</type>
</CustomField>