force-app/main/default/objects/OrgCustomSettings__c/fields/ThirdPartyAgencyDeniedContactId__c.field-meta.xml
<CustomField>
    <fullName>ThirdPartyAgencyDeniedContactId__c</fullName>
    <label>3PL Denied ContactId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>