force-app/main/default/objects/OrgCustomSettings__c/fields/ThirdPartyAgencyReqContactId__c.field-meta.xml
<CustomField>
    <fullName>ThirdPartyAgencyReqContactId__c</fullName>
    <label>3PL Req ContactId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>