force-app/main/default/objects/OrgCustomSettings__c/fields/UpdateSequenceChangeLogSize__c.field-meta.xml
<CustomField>
    <fullName>UpdateSequenceChangeLogSize__c</fullName>
    <label>Update Sequence Change Log Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>