force-app/main/default/objects/OrgCustomSettings__c/fields/UpdateSummaryBatchSize__c.field-meta.xml
<CustomField>
    <fullName>UpdateSummaryBatchSize__c</fullName>
    <label>UpdateSummaryBatchSize</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>